Fix HTML structure and update link in new1.html

--- a/new1.html
+++ b/new1.html
@@ -42,7 +42,8 @@
         <br>
         <br>
 
-        <a href="index1.html">Confirm Details</a>
+        <a href="index.html">Confirm Details</a>
     </form>
 </body>
+
 </html>
